--- a/apiServer/package.json
+++ b/apiServer/package.json
@@ -23,5 +23,8 @@
     "pug": "2.0.0-beta11",
     "validator": "^13.11.0",
     "yup": "^1.3.2"
+  },
+  "devDependencies": {
+    "eslint": "^8.53.0"
   }
 }
